--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,183 @@ Green: #00B172
 White: #FFF
 
 */
+
+html, body{
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    line-height: 1.5;
+    color: #1A1A1A;
+}
+
+header > div {
+    padding: 0 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.nav {
+    position: fixed;
+} 
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+.nav-bar li {
+    margin: 1rem;
+}
+
+.nav-bar a {
+    text-decoration: none;
+    color: #1A1A1A;
+    font-weight: 100;
+}
+
+.banner {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url("../images/landing.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 150vh;
+    color: #FFF;
+}
+
+.banner h1 {
+    font-size: 5rem;
+    margin: 0em;
+}
+
+.banner h2 {
+    font-size: 2rem;
+    margin: 0;
+    font-weight: lighter;
+}
+
+.container {
+    margin: 0;
+    padding: 10px;
+}
+
+.structure {
+    display: flex;
+    flex-direction: column;
+    margin:0;
+}
+
+.structure > div {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+
+.structure > h2 {
+    font-size: 2rem;
+    text-align: center;
+    padding: 20px 0 0 0;
+    margin:0;
+}
+
+.structure hr{
+    border-top: 5px solid #00B172;
+    width: 280px;
+    margin: 0 auto;
+}
+
+.structure .service-box {
+    display:flex;
+    flex-direction: column;
+    align-content: center;
+    align-items:center;
+    padding: 50px;
+    margin: 0;
+    width: 33%
+}
+
+#structure .service-box img {
+    width:100px;
+    height:80px;
+
+}
+
+.structure .service-box h2{
+    display: flex;
+    justify-content: center;
+    color: #00B172;
+    font-size:1.5rem;
+    margin: 0 0 10px 0;
+    text-align:center;
+}
+
+.structure .service-box p {
+    text-align:center;
+    margin:0 10px;
+}
+
+#greenSection {
+    padding: 50px;
+    margin: 10px;
+    color: #FFF;
+    background-color: #00B172;
+    background-image: url("../images/spotify-icon-white.png");
+    background-repeat: no-repeat;
+    background-size: 10%;
+    background-position: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#greenSection h2 {
+    margin: 0px 0;
+    font-size: 2rem;
+}
+
+#greenSection hr {
+    border-top: 4px solid #FFF;
+    width: 425px;
+    margin: 0 0 50px 0;
+}
+
+.greenSection img {
+    width: 260px;
+    height: 460px;
+    padding: 50px;
+}
+
+.greenSection .greenBox {
+    margin-right: 50%
+}
+
+.greenBox p {
+    font-weight:lighter;
+}
+
+.greenBox h3 {
+    font-size: 1.5rem;
+}
+
+.greenSection .div {
+    width: 50%;
+    margin: 0;
+}
